--- a/portal_navigation/.settings/org.eclipse.wst.common.component
+++ b/portal_navigation/.settings/org.eclipse.wst.common.component
@@ -1,20 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="portal_navigation">
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-                
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                
-        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
-                
-        <property name="java-output-path" value="/portal_navigation/target/classes"/>
-        <property name="context-root" value="portal_navigation"/>
             
-    </wb-module>
     
+    <wb-module deploy-name="portal_navigation">
+                        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                        
+        
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+                        
+        
+        <property name="java-output-path" value="/portal_navigation/target/classes"/>
+                
+        <property name="context-root" value="portal_navigation"/>
+                    
+    
+    </wb-module>
+        
+
 </project-modules>
